src/components/App.css
.Header {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  background-color: rgb(18, 16, 22);
  border: 1px solid rgba(45, 47, 52, 1);
  width: 100vw;
}

.Header-buttons {
  background-color: rgb(156, 159, 160);
  width: 4rem;
  height: 1.5rem;
  border: 1px solid;
  border-radius: 0.25rem;
}

.Home-content {
  display: flex;
  position: fixed;
  top: 1.5rem;
  width: 100vw;
  height: 100vh;
}

.Sidebar-Body-header {
  position: sticky;
  font-size: 18px;
  font-weight: bold;
  border-bottom: 0.5px solid rgb(106, 109, 119);
  padding: 1rem;
  color: white;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 100vw;
  height: 1.5rem;
}

.Sidebar-body-header-only {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.Sidebar {
  display: flex;
  flex-direction: column;
  background-color: #171517;
  border: 0.5px solid rgb(106, 109, 119);
  color: whitesmoke;
  width: 20vw;
  max-width: 280vh;
  min-width: 12vh;
}

.Sidebar-content {
  margin-left: 1rem;
}

.Sidebar-chats {
  overflow-y: scroll;
  height: 89vh;
}

.Sidebar-chat-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: #171517;
  color: white;
  border: none;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  padding: 0.1rem 0.1rem 0.1rem 0.8rem;
  width: 100%;
  min-height: 1.5rem;
  margin-bottom: 0.1rem;
}

.Sidebar-overflow {
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  text-align: left;
}
x .not-clickable {
  pointer-events: none;
}

.Sidebar-chat-item:hover {
  background-color: rgb(43, 43, 49);
}

.Sidebar-chat-header {
  padding-top: 0.75rem;
  padding-bottom: 0.25rem;
  padding-right: 1rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.Sidebar-chat-header-div {
  display: flex;
  align-items: center;
}

.Sidebar-new-chat {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  font-size: 1.5rem;
}

.Body {
  flex: 1;
  background-color: rgb(31, 31, 34);
  border: 0.5px solid rgb(106, 109, 119);
}

.Body-message {
  overflow-y: scroll;
  width: 100%;
  height: calc(100% - 12.5rem);
  flex: 1 1 auto;
}

.Body-content {
  height: calc(100% - 2.5rem);
}

.Message {
  margin: 3px;
  display: flex;
  flex-direction: row;
  color: whitesmoke;
  width: 100%;
}

.Message:hover {
  background-color: rgb(47, 47, 51);
  color: whitesmoke;
}

.Message-profile-photo {
  height: 36px;
  line-height: 36px;
  width: 36px;
  background-color: rgb(44, 81, 116);
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
  margin: 3px 10px 3px 10px;
  border-radius: 0.3rem;
}

.Message-no-profile-photo {
  margin: 3px 10px 3px 10px;
  color: rgb(31, 31, 34);
  width: 100%;
}

.Message-no-profile-photo:hover {
  color: rgb(143, 143, 158);
  width: 100%;
}

.Message-profile-name {
  font-weight: bolder;
  font-size: 15px;
  margin: 2px 8px 2px 2px;
}

.Message-profile-time {
  font-size: 12px;
  margin-left: 2px;
  margin-right: 10px;
  color: rgb(143, 143, 158);
}

.Message-profile-time-hide {
  font-size: 12px;
  margin-left: 2px;
  margin-right: 10px;
}

.Message-text {
  font-size: 15px;
  margin: 3px;
  color: whitesmoke;
}

.Message-date {
  border: 1px solid rgb(106, 109, 119);
  border-radius: 4vh;
  color: whitesmoke;
  width: fit-content;
  padding: 0.2rem 0.8rem 0.2rem 0.8rem;
  margin: 0.5rem;
  position: sticky;
  top: 0;
  background-color: rgb(31, 31, 34);
  display: flex;
  justify-content: center;
}

.Message-block {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.Message-block-2 {
  display: flex;
  flex-direction: column;
  align-items: left;
  width: 100%;
}

.Message-input-box {
  position: sticky;
  bottom: 0;
  left: 0;
  display: flex;
  background-color: rgb(31, 31, 34);
  width: 100%;
  justify-content: center;
}

.Message-input {
  height: 7.5rem;
  width: 80%;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.Workspace {
  background-color: #4a154b;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: whitesmoke;
  height: 100vh;
  padding-top: 5vh;
}

.Workspace-welcome-message {
  font-weight: bold;
  font-size: 40px;
  color: whitesmoke;
  margin-top: 15px;
  margin-bottom: 15px;
}

.Workspace-list {
  min-width: 65vw;
  max-width: 100vw;
  border-radius: 4px;
  border-style: solid;
  border-color: rgb(208, 183, 219);
  border-width: 2px;
}

.Workspace-username {
  color: black;
  background-color: #cfb2cf;
  min-height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.Workspace-workspaces-list {
  background-color: whitesmoke;
  color: black;
  display: flex;
  justify-content: space-between;
  min-height: 70px;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
  min-width: 65vw;
  max-width: 100vw;
}

.Workspace-new-workspace-row {
  background-color: whitesmoke;
  color: black;
  display: flex;
  justify-content: space-between;
  min-height: 50px;
  max-height: 50px;
  margin-top: 30px;
  min-width: 65vw;
  max-width: 100vw;
  border-radius: 4px;
  border-style: solid;
  border-color: rgb(208, 183, 219);
  border-width: 2px;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
}

.Workspace-launch-slack-button {
  background-color: #4a154b;
  color: whitesmoke;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 10px;
  border-radius: 2px;
  border: none;
  min-height: 30px;
  max-height: 30px;
  min-width: 100px;
  max-width: 100px;
}

.Workspace-create-workspace-button {
  color: #4a154b;
  background-color: whitesmoke;
  border-color: #4a154b;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 10px;
  border-radius: 2px;
  border-width: 0.75px;
  min-height: 30px;
  max-height: 30px;
  min-width: 170px;
  max-width: 170px;
}

.Workspace-logout-button {
  background: none;
  color: #29b6f6;
  border: none;
  padding-left: 5px;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.Login {
  background-color: #4a154b;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: whitesmoke;
  height: 100vh;
  padding-top: 5vh;
  font-weight: bold;
  font-size: 30px;
}

.Login-login-button {
  color: #4a154b;
  background-color: whitesmoke;
  border-color: #4a154b;
  font-weight: normal;
  font-size: 20px;
  border-radius: 2px;
  border-width: 0.75px;
  margin-top: 10px;
  margin-bottom: 15px;
}

.Login-logo-resize {
  width: 200px;
  height: auto;
}

.button {
  background-color: #171517;
  color: white;
  cursor: pointer;
  margin-right: 0.5rem;
  border: none;
  padding: 0rem 0.5rem 0rem 0.5rem;
}

.button2 {
  background-color: rgb(31, 31, 34);
  color: white;
  cursor: pointer;
  margin-right: 0.5rem;
  border: none;
}

.button-hover:hover {
  background-color: rgb(43, 43, 49);
  border-radius: 0.25rem;
}

::-webkit-scrollbar {
  background-color: #171517;
  width: 8px;
  height: 1px;
}

::-webkit-scrollbar-thumb {
  background-color: rgb(86, 86, 94);
  border-radius: 10rem;
}

.Modal-new-chat {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  background-color: rgb(31, 31, 34);
  color: whitesmoke;
  border: 2px solid #000;
  border-radius: 10px;
  box-shadow: 24;
  padding: 25px;
}

